--- a/.pylintrc
+++ b/.pylintrc
@@ -64,6 +64,8 @@ disable=print-statement,
         parameter-unpacking,
         unpacking-in-except,
         old-raise-syntax,
+        invalid-name,
+        arguments-differ,
         backtick,
         long-suffix,
         old-ne-operator,
