--- a/.pylintrc
+++ b/.pylintrc
@@ -142,7 +142,10 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         no-member,
-        no-name-in-module
+        no-name-in-module,
+        import-error,
+        duplicate-code,
+        consider-using-from-import
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
