define the number of tasks at envs

--- a/.pylintrc
+++ b/.pylintrc
@@ -144,7 +144,7 @@ disable=print-statement,
         no-member,
         no-name-in-module,
         import-error,
-        duplicate-code
+        duplicate-code,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
