--- a/rl2/configs/experiment_config.yaml
+++ b/rl2/configs/experiment_config.yaml
@@ -4,13 +4,13 @@
 env_name: "cheetah-vel"
 
 # Set an experiment name
-exp_name: "exp_14"
+exp_name: "exp_1"
 
 # Set a file name
-file_name: "train_tasks_300_3"
+file_name: null
 
 # Set a GPU index
-gpu_index: 1
+gpu_index: 0
 
 # Set a random seed
 seed: 0
