--- a/src/rl2/configs/dir_target_config.yaml
+++ b/src/rl2/configs/dir_target_config.yaml
@@ -15,13 +15,13 @@ hidden_dim: 256
 # ----------
 rl2_params:
     # Number of training iterations
-    train_iters: 100
+    num_iterations: 100
+    # Number of sampled tasks to collect data for each iteration
+    num_sample_tasks: 5
     # Number of samples to train
-    train_samples: 400
+    num_samples: 400
     # Maximum step for the environment
     max_step: 200
-    # Number of samples to test
-    test_samples: 200
 
 # PPO setup
 # ---------
