--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,7 +9,7 @@
       "login": "dongminlee94",
       "name": "Dongmin Lee",
       "avatar_url": "https://avatars.githubusercontent.com/u/29733842?v=4",
-      "profile": "https://github.com/dongminlee94",
+      "profile": "https://github.com/dongminlee94/",
       "contributions": [
         "code"
       ]
@@ -18,7 +18,7 @@
       "login": "Clyde21c",
       "name": "Seunghyun Lee",
       "avatar_url": "https://avatars.githubusercontent.com/u/35162035?v=4",
-      "profile": "https://seunghyun-lee.tistory.com/",
+      "profile": "https://github.com/Clyde21c/",
       "contributions": [
         "code"
       ]
