--- a/src/rl2/configs/vel_target_config.yaml
+++ b/src/rl2/configs/vel_target_config.yaml
@@ -15,7 +15,7 @@ hidden_dim: 256
 # ----------
 rl2_params:
     # Number of training iterations
-    num_iterations: 200
+    num_iterations: 1000
     # Number of sampled tasks to collect data for each iteration
     num_sample_tasks: 5
     # Number of samples to train
@@ -29,7 +29,7 @@ ppo_params:
     # Discount factor
     gamma: 0.99
     # Number of epochs per iteration
-    grad_iters: 5
+    num_epochs: 5
     # Number of minibatch within each epoch
     mini_batch_size: 128
     # PPO clip parameter
