--- a/src/maml/configs/vel_target_config.yaml
+++ b/src/maml/configs/vel_target_config.yaml
@@ -13,7 +13,7 @@ hidden_dim: 100
 
 maml_params:
     # Number of training iterations
-    train_iters: 200
+    train_iters: 1000
     # Number of task samples for training
     num_sample_tasks: 5
     # Number of samples to train
@@ -29,7 +29,7 @@ maml_params:
     # Number of PPO iterations per each meta-update iteration
     outer_grad_iters: 5
     # Learning rate of PPO losses
-    learning_rate: 0.001
+    outer_learning_rate: 0.001
 
 # PPO setup
 # ---------
