--- a/src/maml/configs/dir_target_config.yaml
+++ b/src/maml/configs/dir_target_config.yaml
@@ -9,27 +9,25 @@ train_tasks: 2
 test_tasks: 2
 
 # Number of hidden units in neural networks
-hidden_dim: 256
+hidden_dim: 64
 
 # MAML setup
 # ----------
 maml_params:
     # Number of training iterations
-    train_iters: 1000
+    num_iterations: 10000
     # Number of task samples for training
     num_sample_tasks: 5
     # Number of samples to train
-    train_samples: 200
-    # Maximum step for the environment
-    max_step: 200
-    # Number of samples to test
-    test_samples: 200
+    num_samples: 200
+    # Maximum steps for the environment
+    max_steps: 200
     # Number of inner adaptation iterations for the MAML algorithm
-    inner_grad_iters: 1
+    num_adapt_epochs: 1
     # Learning rate of inner adaptation
     inner_learning_rate: 0.1
     # Number of PPO iterations per each meta-update iteration
-    outer_grad_iters: 5
+    num_maml_epochs: 5
     # Learning rate of PPO losses
     outer_learning_rate: 0.001
 
