--- a/src/rl2/configs/dir_target_config.yaml
+++ b/src/rl2/configs/dir_target_config.yaml
@@ -21,9 +21,9 @@ rl2_params:
     # Maximum step for the environment
     max_step: 200
     # Number of early stopping conditions
-    num_stopping_conditions: 5
-    # Goal mean value used to early stopping condition
-    stopping_goal_mean: 180
+    num_stop_conditions: 3
+    # Goal value used to early stopping condition
+    stop_goal: 180
 
 # PPO setup
 # ---------
