--- a/src/maml/configs/dir_target_config.yaml
+++ b/src/maml/configs/dir_target_config.yaml
@@ -8,8 +8,11 @@ train_tasks: 2
 # Number of tasks for meta-test
 test_tasks: 2
 
-# Number of hidden units in neural networks
-hidden_dim: 64
+# Number of hidden units in policy networks
+policy_hidden_dim: 64
+
+# Number of hidden units in value networks
+value_function_hidden_dim: 32
 
 # MAML setup
 # ----------
@@ -18,16 +21,14 @@ maml_params:
     num_iterations: 10000
     # Number of task samples for training
     num_sample_tasks: 40
-    # Number of samples to train
-    num_samples: 2000
+    # Number of samples per task to train
+    num_samples: 4000
     # Maximum steps for the environment
     max_steps: 200
     # Number of inner adaptation iterations for the MAML algorithm
     num_adapt_epochs: 1
     # Learning rate of inner adaptation
     inner_learning_rate: 0.1
-    # Number of PPO iterations per each meta-update iteration
-    num_maml_epochs: 5
     # Learning rate of PPO losses
     outer_learning_rate: 0.001
 
@@ -35,8 +36,7 @@ maml_params:
 # ---------
 ppo_params:
     # PPO clip parameter
-    clip_param: 0.3
-    # vf clip parameter
-    vf_clip_param: 10
-
+    clip_param: 0.5
+    # Learning rate of value_fuction
+    vf_learning_rate: 0.1
 
