Feature/maml_exp_baseline (#57)
* Refactor buffers, meta_learner, and sampler modules in PEARL

* Refactor RL^2 code to avoid the bug of buffer

* image size test

* image size test

* image size test

* Fix image size

* Modify the name of PPO variables

* Add num_samples config, sampler log, and buffer log

* Remove num_sample_tasks config

* Add abs function to total_run_cost

* Add abs function to total_run_cost

* put the get_action method into the PPO.py as an staticmathod

* change hidden layer related codes and configuration

* add meta-test and logging features

* restore added codes for the assumed bug

* test commit

* test commit3

* add meta-test

* change defalt configurations of MAML

* Combine value function with policy as a set of meta-model

* meta-train and meta-test baseline

* Structure discussion

* Fix repeated tanh when infer actions from the TanhGaussianPolicy network

* Refactor buffer and sampler

* Add early stopping condition configs to PEARL config files

* Add early stopping condition configs to RL^2 config files

* Fix tanh bug to policy network in PEARL

* Add early stopping condition to meta-learner

* Fix the value to append to dq

* Change configs to what are used in the official repo of MAML

* Fix tanh bug to policy network in PEARL

* Add Linear-feature baseline

* Modify to compute advantage based on newly fitted baseline

* Add separated meta-update based on PPO algorithm

* Add early stopping condition configs to config files

* Update early stopping condition to meta learner

* Add list to range

* Add type annotation to all codes of PEARL

* Change dir name from assets to img

* Refactor PEARL codes

* Fix simple code

* Update README because of changing directory from assets to img

* Seperate train tasks and test tasks

* Set configuration based on references

* Delete linear-feature baseline and modify get_log_prob

* Remove static

--- a/src/maml/configs/vel_target_config.yaml
+++ b/src/maml/configs/vel_target_config.yaml
@@ -3,40 +3,39 @@
 # General setup
 # -------------
 # Number of tasks for meta-train
-train_tasks: 15
+train_tasks: 300
 
 # Number of tasks for meta-test
 test_tasks: 15
 
-# Number of hidden units in neural networks
-hidden_dims: [300, 300, 300]
+# Number of hidden units in policy networks
+policy_hidden_dim: 64
 
+# Number of hidden units in value networks
+value_function_hidden_dim: 32
+
+# MAML setup
+# ----------
 maml_params:
     # Number of training iterations
-    train_iters: 200
+    num_iterations: 10000
     # Number of task samples for training
-    num_sample_tasks: 5
-    # Number of samples to train
-    train_samples: 200
-    # Maximum step for the environment
-    max_step: 200
-    # Number of samples to test
-    test_samples: 200
-    # Number of inner adaptation steps for the MAML algorithm
-    inner_adaptation_steps: 1
+    num_sample_tasks: 40
+    # Number of samples per task to train
+    num_samples: 4000
+    # Maximum steps for the environment
+    max_steps: 200
+    # Number of inner adaptation iterations for the MAML algorithm
+    num_adapt_epochs: 1
     # Learning rate of inner adaptation
     inner_learning_rate: 0.1
-    # Number of PPO steps per meta-update iteration
-    maml_optimizer_steps: 5
     # Learning rate of PPO losses
-    learning_rate: 0.001
+    outer_learning_rate: 0.001
 
 # PPO setup
 # ---------
 ppo_params:
     # PPO clip parameter
-    clip_param: 0.3
-    # coefficient of the value function 
-    vf_loss_coeff: 0.5
-    # Learning rate of value function
-    vf_learning_rate: 0.001
+    clip_param: 0.5
+    # Learning rate of value_fuction
+    vf_learning_rate: 0.1
