--- a/src/pearl/configs/dir_target_config.yaml
+++ b/src/pearl/configs/dir_target_config.yaml
@@ -18,7 +18,7 @@ hidden_dim: 300
 # -----------
 pearl_params:
     # Number of training iterations
-    num_iterations: 150
+    num_iterations: 1000
     # Number of sampled tasks to collect data for each iteration
     num_sample_tasks: 5
     # Number of samples collected per task before training
@@ -38,6 +38,10 @@ pearl_params:
     max_step: 200
     # How many samples to store
     max_buffer_size: 1000000
+    # Number of early stopping conditions
+    num_stop_conditions: 3
+    # Goal value used to early stopping condition
+    stop_goal: 190 
 
 # SAC setup
 # ---------
