--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 black==20.8b1
 isort==5.6.4
+mujoco-py==2.0.2.13
 numpy==1.21.0
 gym==0.18.0
 higher==0.2.1
-pybullet==3.1.7
 pylint==2.8.3
 pytest==6.2.2
 pytest-flake8==1.0.6
