--- a/src/pearl/configs/experiment_config.yaml
+++ b/src/pearl/configs/experiment_config.yaml
@@ -1,25 +1,25 @@
 # PEARL Experiment configs
 
-# Select either dir or vel
+# Select either dir or vel (str)
 env_name: "dir"
 
-# Set an experiment name to save
+# Set an experiment name to save (str)
 save_exp_name: "exp_1"
 
-# Set a file name to save
+# Set a file name to save (str or null)
 save_file_name: null
 
-# Set an experiment name to load
+# Set an experiment name to load (str or null)
 load_exp_name: null
 
-# Set a file name to load
+# Set a file name to load (str or null)
 load_file_name: null
 
-# Set a checkpoint number
+# Set a checkpoint number (int)
 load_ckpt_num: 0
 
-# Set a GPU index
+# Set a GPU index (int)
 gpu_index: 0
 
-# Set a random seed
+# Set a random seed (int)
 seed: 0
