replace ppo with trpo

--- a/src/maml/configs/dir_target_config.yaml
+++ b/src/maml/configs/dir_target_config.yaml
@@ -18,25 +18,30 @@ value_function_hidden_dim: 32
 # ----------
 maml_params:
     # Number of training iterations
-    num_iterations: 10000
+    num_iterations: 500
     # Number of task samples for training
     num_sample_tasks: 40
     # Number of samples per task to train
-    num_samples: 8000
+    num_samples: 2000
     # Maximum steps for the environment
-    max_steps: 200
+    max_steps: 100
     # Number of inner adaptation iterations for the MAML algorithm
     num_adapt_epochs: 1
     # Learning rate of inner adaptation
     inner_learning_rate: 0.1
-    # Learning rate of PPO losses
-    outer_learning_rate: 0.001
 
-# PPO setup
+# TRPO setup
 # ---------
-ppo_params:
-    # PPO clip parameter
-    clip_param: 0.5
+    # Maximum iters for backtracking line search
+    backtrack_iters: 15
+    # Exponentially decreasing ratio for line searching step
+    backtrack_coeff: 0.8
+    # KL-divergence limit
+    max_kl: 0.01
+pg_params:
     # Learning rate of value_fuction
     vf_learning_rate: 0.1
+    gamma: 0.99
+    lamda: 1.0
+
 
