--- a/src/maml/configs/experiment_config.yaml
+++ b/src/maml/configs/experiment_config.yaml
@@ -2,7 +2,7 @@
 # Experiment configs
 
 # Select either dir or vel (str)
-env_name: "vel"
+env_name: "dir"
 
 # Set an experiment name to save (str)
 save_exp_name: "exp_1"
