--- a/src/maml/configs/experiment_config.yaml
+++ b/src/maml/configs/experiment_config.yaml
@@ -2,10 +2,10 @@
 # Experiment configs
 
 # Select either dir or vel (str)
-env_name: "dir"
+env_name: "vel"
 
 # Set meta test interval (int)
-test_interval: 10
+test_interval: 1
 
 # Set an experiment name to save (str)
 save_exp_name: "exp_1"
