restore heldout-test set

--- a/src/maml/configs/dir_target_config.yaml
+++ b/src/maml/configs/dir_target_config.yaml
@@ -5,8 +5,8 @@
 # Number of tasks for meta-train
 train_tasks: 2
 
-# Number of tasks sampled from train-task set for meta-test
-num_test_tasks: 2
+# Number of tasks for meta-test
+test_tasks: 2
 
 # Number of hidden units in policy networks
 policy_hidden_dim: 64
