--- a/src/rl2/configs/vel_target_config.yaml
+++ b/src/rl2/configs/vel_target_config.yaml
@@ -38,3 +38,27 @@ ppo_params:
     clip_param: 0.3
     # Learning rate of PPO losses
     learning_rate: 0.0001
+
+# TRPO setup
+# ---------
+trpo_params:
+    # Discount factor
+    gamma: 0.99
+    # Number of minibatch within each epoch
+    mini_batch_size: 128
+    # Maximum iters for backtracking line search
+    backtrack_iters: 15
+    # Exponentially decreasing ratio for line searching step
+    backtrack_coeff: 0.2
+    # KL-divergence limit
+    max_kl: 0.01
+    # Learning rate of TRPO losses
+    learning_rate: 0.0001
+    # Learning rate of value_fuction as a baseline fitting
+    vf_learning_rate: 0.1
+    # Learning iterations of value_fuction as a baseline fitting
+    vf_learning_iters: 1
+    # RL discount factor
+    gamma: 0.99
+    # gae parameters
+    lamda: 1.0
