--- a/.pylintrc
+++ b/.pylintrc
@@ -142,7 +142,9 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         no-member,
-        no-name-in-module
+        no-name-in-module,
+        import-error,
+        duplicate-code,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -202,7 +204,7 @@ logging-modules=logging
 [SPELLING]
 
 # Limits count of emitted suggestions for spelling mistakes.
-max-spelling-suggestions=4
+max-spelling-suggestions=15
 
 # Spelling dictionary name. Available dictionaries: none. To make it work,
 # install the python-enchant package.
@@ -331,7 +333,7 @@ indent-after-paren=4
 indent-string='    '
 
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=104
 
 # Maximum number of lines in a module.
 max-module-lines=1000
