--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
 [isort]
-line_length = 88
+profile = black
+line_length = 104
 
 [mypy]
 ignore_missing_imports = True
 follow_imports = skip
 
 [flake8]
-max-line-length = 88
+max-line-length = 104
 ignore = E203,W503
