--- a/.pylintrc
+++ b/.pylintrc
@@ -145,6 +145,10 @@ disable=print-statement,
         no-name-in-module,
         import-error,
         duplicate-code,
+        too-many-instance-attributes,
+        too-many-arguments,
+        too-many-locals,
+        not-callable,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
