--- a/.pylintrc
+++ b/.pylintrc
@@ -149,6 +149,10 @@ disable=print-statement,
         too-many-arguments,
         too-many-locals,
         not-callable,
+        simplifiable-if-expression,
+        protected-access,
+        used-before-assignment,
+        line-too-long,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
