--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 104
-target-version = ["py37", "py38", "py39"]
+target-version = ["py37", "py38"]
 exclude = ""
 
 [tool.isort]
