let the hidden be retained

--- a/.pylintrc
+++ b/.pylintrc
@@ -153,6 +153,7 @@ disable=print-statement,
         protected-access,
         used-before-assignment,
         line-too-long,
+        too-few-public-methods,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
