--- a/src/meta_rl/rl2/configs/experiment_config.yaml
+++ b/src/meta_rl/rl2/configs/experiment_config.yaml
@@ -1,7 +1,7 @@
 # RL^2 Experiment configs
 
 # Select either dir or vel (str)
-env_name: "vel"
+env_name: "dir"
 
 # Set an experiment name to save (str)
 save_exp_name: "exp_1"
