--- a/.pylintrc
+++ b/.pylintrc
@@ -154,6 +154,7 @@ disable=print-statement,
         used-before-assignment,
         line-too-long,
         too-few-public-methods,
+        wrong-import-position,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
