--- a/.pylintrc
+++ b/.pylintrc
@@ -155,7 +155,9 @@ disable=print-statement,
         line-too-long,
         too-few-public-methods,
         wrong-import-position,
-        C0114, C0115, C0116
+        C0114, # missing-module-docstring
+        C0115, # missing-class-docstring
+        C0116, # missing-function-docstring
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
