--- a/src/meta_rl/pearl/configs/vel_target_config.yaml
+++ b/src/meta_rl/pearl/configs/vel_target_config.yaml
@@ -52,7 +52,7 @@ sac_params:
     kl_lambda: 0.1
     # 정책 네트워크와 가치 네트워크의 배치에서 사용되는 샘플 수
     batch_size: 256
-    # Q-함수 네트워크의 학습률
+    # 행동 가치 함수 네트워크의 학습률
     qf_lr: 0.0003
     # 인코더 네트워크의 학습률
     encoder_lr: 0.0003
